@@ -1,5 +1,5 @@
 # GNU Makefile for hexenworld svgalib-client using GCC.
-# $Header: /cvsroot/uhexen2/engine/hexenworld/client/Makefile.svga,v 1.3 2010-11-21 10:23:24 sezero Exp $
+# $Id$
 #
 # This makefile builds SVGALib dependant software renderer client
 # for linux-x86 only. This makefile is a butchered version of the
